vm options